--- a/index.html
+++ b/index.html
@@ -32,5 +32,7 @@
        </div>
     </section>
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
